# tunelo

./: .gitignore  Cargo.toml  DESIGN.md  DEV.md  README.md  README.zh.md
.github/workflows/: ci.yml  release.yml
crates/client/: Cargo.toml
crates/client/src/: fileserver.rs  main.rs  proxy.rs  tunnel.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: http_listener.rs  main.rs  proxy.rs  router.rs  tls.rs  tunnel.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  lib.rs  messages.rs  ws_mux.rs
crates/relay/: Cargo.toml
crates/relay/src/: http_listener.rs  lib.rs  main.rs  proxy.rs  router.rs  tls.rs  tunnel.rs  ws_tunnel.rs
crates/tunelo/: Cargo.toml
crates/tunelo/src/: fileserver.rs  main.rs  proxy.rs  tunnel.rs
crates/tunneleo/: Cargo.toml
crates/tunneleo/src/: main.rs  proxy.rs  tunnel.rs
deploy/: 01-setup-vps.sh  02-cloudflare-dns.md  03-letsencrypt.sh  04-deploy.sh  README.md  tunelo-gateway.service  tunelo-relay.service  tunelo.net.conf
skills/tunelo/: SKILL.md
skills/tunneleo/: SKILL.md
specs/: future-design.md
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: api.ts  index.css  main.tsx  router.tsx  types.ts
web/src/components/ui/: breadcrumb.tsx
web/src/lib/: query.ts
web/src/pages/: Explorer.tsx  Viewer.tsx
web/src/viewers/: AudioViewer.tsx  CodeViewer.tsx  CsvViewer.tsx  ExcelViewer.tsx  FileViewer.tsx  HtmlViewer.tsx  ImageViewer.tsx  MarkdownViewer.tsx  PdfViewer.tsx  VideoViewer.tsx
website/: index.html  package.json  pnpm-lock.yaml
website/public/: install.ps1  install.sh
website/src/: App.tsx  components.tsx  editorial-prism.css  editorial.css  i18n.tsx  index.css  main.tsx
website/src/content/: en.tsx  zh.tsx
