[package]
name = "tunneleo-protocol"
description = "Shared protocol types for Tunneleo tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
rmp-serde = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
