[package]
name = "tunneleo-relay"
description = "Tunneleo relay — routes public HTTP to tunnel clients"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tunneleo-protocol = { path = "../protocol" }

tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
base62 = { workspace = true }
names = { workspace = true }
httparse = { workspace = true }
scopeguard = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
