[package]
name = "tunneleo"
description = "Expose anything to the internet — local ports, files, directories"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tunneleo"
path = "src/main.rs"

[dependencies]
tunneleo-protocol = { path = "../protocol" }
tunneleo-relay = { path = "../relay" }

tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = "1"
include_dir = { workspace = true }
rand = { workspace = true }

hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "server", "server-auto"] }
http-body-util = "0.1"
http = "1"
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"